# cmd/web/swagger.yaml
@@ -22,6 +22,29 @@ definitions:
 
     type: object
     x-go-package: goswagger/models
+
+  ContactUploadRequest:
+    properties:
+
+      loan_id:
+        description: |-
+          Loan Id
+          in: number
+        format: number
+        type: number
+        x-go-name: loan_id
+
+      contacts:
+        description: |-
+          Contacts In Stringified
+          in: string
+        format: string
+        type: string
+        x-go-name: string
+
+    type: object
+    x-go-package: goswagger/models
+
   AdminLoginRequest:
     properties:
 
@@ -134,6 +157,34 @@ paths:
     get:
       description: Get Loan Applications
       operationId: Login Admin
+
+      responses:
+        "200":
+          description: Loan Applications
+
+        "400":
+          description: CommonError
+
+
+  /verified/contactupload:
+    post:
+      description: Upload Contacts Of User
+      operationId: Upload Contacts Of User
+      parameters:
+        - in: header
+          name: token
+          schema:
+          type: string
+          format: string
+          required: true
+        - description: 'name: body'
+          in: body
+          name: body
+          required: true
+          schema:
+            $ref: '#/definitions/ContactUploadRequest'
+          x-go-name: Body
+
 
       responses:
         "200":
